app/assets/styles/components/_buttons.scss
.btn {
    position: relative;
    overflow: hidden;
    border-color: var(--color-text);
    border: solid 0.15rem var(--color-text);
    border-radius: 0.5rem 0 0.5rem 0;
    text-transform: uppercase;
    transition: color 0.5s, background-color 0.5s, transform 0.5s;
    font-size: calc(0.9 * $font-size-text);
    padding: 0.5rem 1rem;
    width: 14rem;

    @include respond-to('breakpoint-992') {
        font-size: $font-size-text;
        padding: 0.75rem 1.25rem;
        width: 18rem;
    }

    &::after {
        content: '';
        position: absolute;
        top: 0;
        left: -100%;
        width: 100%;
        height: 100%;
        background-color: rgba(var(--color-tertiary-r), var(--color-tertiary-g), var(--color-tertiary-b), 0.25);
        transition: left 0.25s;
    }

    &:hover::after {
        left: 0;
    }

    &:hover {
        transform: scale(1.05);
    }

    &:active {
        @include animation-pressed(0.9);
    }
}

#btn-scroll-to-top {
    button {
        display: none;

        @include respond-to('breakpoint-768') {
            display: block;
            position: fixed;
            right: 0.25rem;
            background-color: transparent;
            padding: 0;
            border: none;
            opacity: 0;
            visibility: hidden;
            transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;

            &.visible {
                opacity: 1;
                visibility: visible;
            }
        }
    }

    svg {
        height: 2.7rem;
        width: auto;
        rotate: 270deg;
        @extend %flex-center;

        &:hover {
            opacity: 0.8;
        }
    }
}

#btn-scroll-to-next-section {
    @extend %flex-center;
    margin-top: 2rem;

    button {
        background-color: transparent;
        border: none;
        transition: transform 0.5s ease-in-out;
    }

    svg {
        height: 5rem;
        width: auto;
        @include animation-bounce(1.5s, infinite);
        transition: transform 0.5s ease-in-out;

        @include respond-to('breakpoint-768') {
            height: 6.5rem;
        }

        &.scale-effects {
            &:hover {
                animation: none;
                opacity: 0.8;
                transform: scale(1.15);
            }

            &:active {
                @include animation-pressed(0.9);
            }
        }

        &.rotate-up-effects {
            animation: none;
            transform: rotate(180deg);

            &:hover {
                transform: rotate(180deg) scale(1.15);
            }
        }
    }
}

.btn-dark-mode,
.btn-light-mode {
    opacity: 1;
}

.btn-go-to-home {
    .btn {
        background-color: var(--color-primary);
    }
}

.btn-cta {
    display: none;

    @include respond-to('breakpoint-1500') {
        @include flex-container(row, start);
        gap: 2.5rem;
    }
}

.btn-cta-primary {
    background-color: var(--color-primary);
}

.btn-cta-secondary {
    background-color: var(--color-tertiary);
}

.btn-cta-primary,
.btn-cta-secondary {
    position: relative;
    border: solid 0.15rem rgba(var(--color-text-r), var(--color-text-g), var(--color-text-b), 0.6);
    @include animation-continuousPulse(2.5s);
    transition: transform 0.5s, border-color 0.3s, box-shadow 0.3s;
}

